# test-dept

./: DebuggingTestCases.md  INSTALL  Makefile  Makefile.in  ProjectHome.md  README  TestAutomation.md  TestDept.md  bootstrap  configure.ac  makefile.am  makefile.in  self-test.mk
examples/: makefile.am
src/: build_asm_proxies  build_c_proxy  build_main  build_main_from_symbols  build_stub  sym2asm  (+24 more)
trunk/: ChangeLog  INSTALL  Makefile  Makefile.in  README  configure.ac  makefile.am  makefile.in  self-test.mk
trunk/doc/art/: functions.dia  generating_code.dia  running_suites.dia  stub_functions.dia  stub_switch.dia
trunk/examples/: makefile.am
trunk/examples/assertion_examples/: Makefile
trunk/examples/automatic_project/: Makefile  foo.c  foo.h  sut.c  sut.h  sut_test.c
trunk/examples/example_project/: Makefile  instruments_test.c  sit_test.c  sum_test.c
trunk/examples/not_recommended_old_c_style/: Makefile  instruments_test.c
trunk/examples/off_dir/: Makefile
trunk/examples/prefixed_project/: Makefile
trunk/examples/simple_project/: Makefile
trunk/src/: build_main  build_main_from_symbols  build_main_from_symbols.1  build_stub  build_stubs  csym2repl  makefile.am  refer_to_stubs  sym2asm.1  sym2asm_i686.awk  sym2asm_sun4u.awk  sym2asm_x86_64.awk  sym2repl  sym2repl.1  test-dept-cstubs.mk  test-dept-definitions.mk  test-dept-proxies.mk  test-dept-rudimentary.mk  test-dept.3  test-dept.h  test-dept.mk  test_dept  test_dept.1  test_dept.h  test_dept.mk  test_dept_normal.mk  test_dept_simple.mk
trunk/test/: Makefile  assertion_test.c  prepost_test.c
(+81 files in other folders)
